--- a/sls-albums/client/src/partials/scripts.html
+++ b/sls-albums/client/src/partials/scripts.html
@@ -2,4 +2,7 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.11.1/axios.min.js"></script>
+<script type="text/javascript" src="/scripts/defaults.js"></script>
+<script type="text/javascript" src="/scripts/album-create.js"></script>
+<script type="text/javascript" src="/scripts/album-upload.js"></script>
 <script type="text/javascript" src="/scripts/uploads.js"></script>
