further clean up in album-builder

--- a/sls-albums/album-builder/album-view.hbs
+++ b/sls-albums/album-builder/album-view.hbs
@@ -4,16 +4,21 @@
   <title>Lambda Albums: {{albumName}}</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/cosmo/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
 </head>
-<body style="padding: 10px">
+<body>
   <div class="container">
-    <div class="well">
-      <h1>Lambda Albums: {{albumName}}</h1>
-      <p>{{standard.length}} image(s) in this album. Last updated {{updatedAt}}.</p>
+    <div class="row">
+      <div class="col-sm-12">
+        <h1>Lambda Albums: {{albumName}}</h1>
+        <p>{{photos.length}} image(s) in this album. Last updated: {{updatedAt}}.</p>
+        <hr>
+      </div>
     </div>
     <div class="row">
-    {{#each thumbs}}
+    {{#each photos}}
       <div class="col-sm-12 col-md-4" style="padding: 10px">
-        <img src="{{src}}"/>
+        <a href="{{standard.src}}">
+          <img src="{{thumb.src}}"/>
+        </a>
       </div>
     {{/each}}
     </div>
